# witter

witter-backend/: Cargo.toml
witter-backend/src/: env.rs  main.rs  middlewares.rs  responses.rs
witter-backend/src/endpoints/: me.rs  mod.rs  users.rs
witter-backend/src/tests/: mod.rs  test_db.rs  test_helper.rs
witter-frontend/: Cargo.toml  Makefile.toml  readme_for_dev.md
witter-frontend/src/: lib.rs
