[package]
name = "witter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
assert-json-diff = "2.0.1"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
sqlx = { version = "0.5.10", features = ["runtime-async-std-rustls", "chrono", "macros", "json", "uuid", "postgres"] }
tide = "0.16.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rand = "0.8.4"
bcrypt = "0.10"
regex = "1.5.4"
lazy_static = "1.4.0"
async-trait = "0.1.52"

[features]

[dev-dependencies]
surf = { version = "2.0.0", default-features = false, features = ["h1-client"] }
assert-json-diff = "2.0.1"
futures = "0.3.19"
